tests/baselines/reference/ExportAssignment7.errors.txt
==== tests/cases/compiler/ExportAssignment7.ts (2 errors) ====
    export class C {
    }
    
    export = B;
    ~~~~~~~~~~~
!!! ExportAssignment7.ts(4,1): error TS2095: Cannot find name 'B'.
    ~~~~~~~~~~~
!!! ExportAssignment7.ts(4,1): error TS2245: Export assignment not allowed in module with exported element.